[project]
name = "llm-evals-cli"
version = "0.1"
description = "A CLI tool for running and managing LLM evaluations"
readme = "README.md"
authors = [{name = "Kevin Schaul"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = []
dependencies = [
    "click",
    "llm>=0.24",
    "pandas>=2.2",
    "pydantic_evals>=0.1.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/kevinschaul/llm-evals-cli"
Changelog = "https://github.com/kevinschaul/llm-evals-cli/releases"
Issues = "https://github.com/kevinschaul/llm-evals-cli/issues"
CI = "https://github.com/kevinschaul/llm-evals-cli/actions"

[project.scripts]
llm-evals-cli = "llm_evals_cli.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
